[project]
name = "hooktui"
version = "0.1.0"
description = "webhook.site in your terminal — a TUI webhook inspector"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "textual>=8.0.2",
    "uvicorn>=0.41.0",
]

[project.scripts]
hooktui = "hooktui.app:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
