[project]
name = "hooktui"
version = "0.1.0"
description = "webhook.site in your terminal — a TUI webhook inspector"
readme = "README.md"
authors = [
    { name = "Sarthak Sidhant", email = "sarthaksidhantisopolice@gmail.com" }
]
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["terminal", "tui", "webhook", "developer-tools", "textual"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "textual>=8.0.2",
    "uvicorn>=0.41.0",
    "dnslib>=0.9.24",
    "aiosmtpd>=1.4.6",
]

[project.urls]
Homepage = "https://github.com/Sarthak-Sidhant/hooktui"
Repository = "https://github.com/Sarthak-Sidhant/hooktui"

[project.scripts]
hooktui = "hooktui.app:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hooktui = ["*.css"]

[tool.uv]
package = true
